test/library/packages/Itertools/check_infinite_halt.good
check_infinite_halt.chpl:8: error: halt reached - Infinite iteration not supported for parallel loops.

