test/library/packages/Itertools/check_infinite_halt.chpl
use Itertools;

var test_case: int = 5;


//  Testing for halt at infinite parallel iteration

forall element in repeat(5) do ;
